--- a/public/theme1/sample/assets/mobirise/css/mbr-additional.css
+++ b/public/theme1/sample/assets/mobirise/css/mbr-additional.css
@@ -560,6 +560,12 @@ a.text-black:focus {
 .btn-form:hover {
   cursor: pointer;
 }
+
+.ratings> span:hover:before {
+   content: "\2605";
+   position: absolute;
+}
+
 a,
 a:hover {
   color: #149dcc;
