--- a/public/theme1/sample/assets/mobirise/css/mbr-additional.css
+++ b/public/theme1/sample/assets/mobirise/css/mbr-additional.css
@@ -49,10 +49,10 @@ body {
 }
 .display-7 {
   font-family:"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-  font-size: 1.7rem;
+  font-size: 1.3rem;
 }
 .display-7 > .mbr-iconfont {
-  font-size: 1.6rem;
+  font-size: 1.4rem;
 }
 /* ---- Fluid typography for mobile devices ---- */
 /* 1.4 - font scale ratio ( bootstrap == 1.42857 ) */
@@ -665,10 +665,10 @@ a:hover {
   box-shadow: none;
   color: #565656;
   font-family: 'Rubik', sans-serif;
-  font-size: 1.6rem;
-  line-height: 1.43;
-  min-height: 3.5em;
-  padding: 1.07em .5em;
+  font-size: 1.2em;
+  line-height: 1.23;
+  min-height: 1.2em;
+  padding: 1.02em .3em;
 }
 .form-control > .mbr-iconfont {
   font-size: 1.6rem;
