FInalised the customer Gui and version 1 of the project

--- a/public/theme1/landing/student/assets/mobirise/css/mbr-additional.css
+++ b/public/theme1/landing/student/assets/mobirise/css/mbr-additional.css
@@ -1754,7 +1754,7 @@ body {
   color: #c1c1c1 !important;
 }
 .cid-qI6rynyrrY {
-  background-image: url("../../../assets/images/jumbotron.jpg");
+  background-image: url("../../../assets/images/jumbotron.png");
 }
 .cid-qI6sDs8vva {
   background-image: url("../../../assets/images/03.jpg");
@@ -1783,7 +1783,7 @@ body {
   padding-bottom: 1.5rem;
 }
 .cid-qI6sEBqGWD {
-  background-image: url("../../../assets/images/background1.jpg");
+  background-image: url("../../../assets/images/background1.png");
 }
 .cid-qI6sEBqGWD h1 {
   color: #616161;
@@ -1797,7 +1797,7 @@ body {
   font-style: italic;
 }
 .cid-qI84xrNWAT {
-  background-image: url("../../../assets/images/background2.jpg");
+  background-image: url("../../../assets/images/background2.png");
 }
 .cid-qI84xrNWAT .mbr-section-subtitle {
   letter-spacing: .2rem;
